test/lit/vpto/vcvt_low_precision_verify_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto %s 2>&1 | FileCheck %s

// CHECK: error: 'pto.vcvt' op part must be P0, P1, P2, or P3 for packed vcvt forms

module attributes {pto.target_arch = "a5"} {
  func.func @vcvt_f4_to_bf16_rejects_even(%seed: bf16) {
    pto.vecscope {
      %mask_b8 = pto.pset_b8 "PAT_ALL" : !pto.mask<b8>
      %mask_b16 = pto.pset_b16 "PAT_ALL" : !pto.mask<b16>
      %src = pto.vdup %seed, %mask_b16 : bf16, !pto.mask<b16> -> !pto.vreg<128xbf16>
      %f4 = pto.vcvt %src, %mask_b16 {rnd = "R", part = "P0"} : !pto.vreg<128xbf16>, !pto.mask<b16> -> !pto.vreg<256x!pto.f4E1M2x2>
      %bad = pto.vcvt %f4, %mask_b8 {part = "EVEN"} : !pto.vreg<256x!pto.f4E1M2x2>, !pto.mask<b8> -> !pto.vreg<128xbf16>
    }
    return
  }
}
